scudo-proc-macros/tests/ui/no_ident_or_literal_fail.stderr
error: Expect a valid value like '3.14' or 'true'
  --> tests/ui/no_ident_or_literal_fail.rs:18:28
   |
18 | #[set_scudo_options(name = foo)]
   |                            ^^^
